made card design for conjugation index page

--- a/french/index.html
+++ b/french/index.html
@@ -8,6 +8,7 @@
   <title>French resources</title>
 
   <link rel="icon" type="image/x-icon" href="images/eiffel-tower.ico">
+  <link rel="stylesheet" href="styles.css">
 
   <style>
     body {
@@ -19,45 +20,72 @@
 
 <body>
   <h2>La conjugaison des temps de verbes</h2>
-  <h3>
-    <a href="pages/conjugations.html?Le%20pr%C3%A9sent">Le présent</a>,
-    <a href="pages/exercise_present.html">Exercise</a>
-  </h3>
+
+  <div class="card">
+    <header>Le présent</header>
+    <a
+      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F25162885_Le_pr_sent_de_l_indicatif_site_web.pdf">théorie</a>
+    <a href="pages/conjugations.html?Le%20pr%C3%A9sent">exercice de liste de verbes</a>
+    <a href="pages/exercise_present.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <header>Le passé composé</header>
+    <a
+      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F1136364813_Le_pass__compos__conjugaison_et_accords_d_butant.pdf">théorie</a>
+    <a href="pages/conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">exercice de liste de verbes</a>
+    <a href="pages/exercise_presentperfect.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <header>L'imparfait</header>
+    <a href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F1376846899_l_imparfait_conjugaison.pdf">théorie</a>
+    <a href="pages/conjugations.html?L'imparfait">exercice de liste de verbes</a>
+    <a href="pages/exercise_imperfect.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <header>Le futur simple</header>
+    <a
+      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F738776285_Le_futur_simple_conjugaison.pdf">théorie</a>
+    <a href="pages/conjugations.html?Le%20futur%20simple">exercice de liste de verbes</a>
+    <a href="pages/exercise_future.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <header>Le conditionnel présent</header>
+    <a
+      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F601395165_Le_conditionnel_present_conjugaison.pdf">théorie</a>
+    <a href="pages/conjugations.html?Le%20conditionnel%20pr%C3%A9sent">exercice de liste de verbes</a>
+    <a href="pages/exercise_conditionalpresent.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <header>Le conditionnel passé</header>
+    <a
+      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F1452529716_Le_conditionnel_passe_conjugaison.pdf">théorie</a>
+    <a href="pages/conjugations.html?Le%20conditionnel%20passé">exercice de liste de verbes</a>
+    <a href="pages/exercise_conditionalperfect.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <header>La concordance du passé</header>
+    <a
+      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F959326456_Le_pass__compos__et_l_imparfait_d_butant_interm_diaire.pdf">théorie</a>
+    <a href="pages/exercise_concordance.html">exercice de texte</a>
+  </div>
 
   <h3>
-    <a href="pages/conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">Le passé composé</a>,
-    <a href="pages/exercise_presentperfect.html">Exercise</a>
+    <a href="pages/conjugations_mixed.html?Conjugaisons%20mélangées">Conjugaisons mélangées</a>
   </h3>
 
-  <h3>
-    <a href="pages/conjugations.html?L'imparfait">L'imparfait</a>,
-    <a href="pages/exercise_imperfect.html">Exercise</a>,
-    <a href="pages/exercise_concordance.html">Exercise de concordance</a>
-  </h3>
 
   <h3>
-    <a href="pages/conjugations.html?Le%20futur%20simple">Le futur simple</a>,
-    <a href="pages/exercise_future.html">Exercise</a>
-  </h3>
-
-  <h3>
-    <a href="pages/conjugations.html?Le%20conditionnel%20pr%C3%A9sent">Le conditionnel présent</a>,
-    <a href="pages/exercise_conditionalpresent.html">Exercise</a>
-  </h3>
-
-  <h3>
-    <a href="pages/conjugations.html?Le conditionnel passé">Le conditionnel passé</a>,
-    <a href="pages/exercise_conditionalperfect.html">Exercise</a>
-  </h3>
-
-  <h3>
-    <a href="pages/conjugations_mixed.html?Conjugaisons mélangées">Conjugaisons mélangées</a>
+    <a class="wide" href="pages/stats.html">Statistiques</a>
   </h3>
 
   <br />
-  <h3>
-    <a href="pages/stats.html">Statistiques</a>
-  </h3>
+  <br />
 </body>
 
 </html>
