added error counter to conditional present text exercises

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -76,8 +76,8 @@
                             <td class="conjugations.html?Le%20futur%20simple"></td>
                             <td class="exercise_future.html"></td>
 
-                            <td></td>
-                            <td></td>
+                            <td class="conjugations.html?Le%20conditionnel%20pr%C3%A9sent"></td>
+                            <td class="exercise_conditionalpresent.html"></td>
 
                             <td class="exercise_concordance.html"></td>
                         </tr>
