fixed text exercise for conditional present

--- a/french/pages/exercise_conditionalpresent.html
+++ b/french/pages/exercise_conditionalpresent.html
@@ -118,35 +118,35 @@
                     <li>
                         <div>
                             <span title="ramèneraient le bébé de la garderie.">de ramener le bébé de la garderie.</span>
-                            <span>qu'ils <input type="text" pattern="ramèneraient le bébé de la garderie."></span>
+                            <span>qu'ils <input type="text" pattern="ramèneraient le bébé de la garderie[.]?"></span>
                         </div>
                     </li>
 
                     <li>
                         <div>
                             <span title="achèterait du dessert.">d'acheter du dessert.</span>
-                            <span>que Lise <input type="text" pattern="achèterait du dessert."></span>
+                            <span>que Lise <input type="text" pattern="achèterait du dessert[.]?"></span>
                         </div>
                     </li>
 
                     <li>
                         <div>
                             <span title="sèmerait des plants.">de semer des plants.</span>
-                            <span>que Rémi <input type="text" pattern="sèmerait des plants."></span>
+                            <span>que Rémi <input type="text" pattern="sèmerait des plants[.]?"></span>
                         </div>
                     </li>
 
                     <li>
                         <div>
                             <span title="achèveraient la peinture.">d'achever la peinture.</span>
-                            <span>qu'ils <input type="text" pattern="achèveraient la peinture."></span>
+                            <span>qu'ils <input type="text" pattern="achèveraient la peinture[.]?"></span>
                         </div>
                     </li>
 
                     <li>
                         <div>
                             <span title="emmènerait les enfants au cirque.">d'emmener les enfants au cirque.</span>
-                            <span>que Jean <input type="text" pattern="emmènerait les enfants au cirque."></span>
+                            <span>que Jean <input type="text" pattern="emmènerait les enfants au cirque[.]?"></span>
                         </div>
                     </li>
 
@@ -154,14 +154,15 @@
                         <div>
                             <span title="soulèverait la question à la réunion.">de soulever la question à la
                                 réunion.</span>
-                            <span>que Pierre <input type="text" pattern="soulèverait la question à la réunion."></span>
+                            <span>que Pierre <input type="text"
+                                    pattern="soulèverait la question à la réunion[.]?"></span>
                         </div>
                     </li>
 
                     <li>
                         <div>
                             <span title="se promèneraient au parc.">de se promener au parc.</span>
-                            <span>qu'elles <input type="text" pattern="se promèneraient au parc."></span>
+                            <span>qu'elles <input type="text" pattern="se promèneraient au parc[.]?"></span>
                         </div>
                     </li>
 
@@ -169,7 +170,7 @@
                         <div>
                             <span title="enlèveraient ces vieux rideaux rouges.">d'enlever ces vieux rideaux
                                 rouges.</span>
-                            <span>qu'ils <input type="text" pattern="enlèveraient ces vieux rideaux rouges."></span>
+                            <span>qu'ils <input type="text" pattern="enlèveraient ces vieux rideaux rouges[.]?"></span>
                         </div>
                     </li>
 
@@ -177,7 +178,8 @@
                         <div>
                             <span title="ne harcèlerait plus le petit voisin.">de ne plus harceler le petit
                                 voisin.</span>
-                            <span>que Sophie <input type="text" pattern="ne harcèlerait plus le petit voisin."></span>
+                            <span>que Sophie <input type="text"
+                                    pattern="ne harcèlerait plus le petit voisin[.]?"></span>
                         </div>
                     </li>
 
@@ -186,7 +188,8 @@
                             <span title="enverraient leur réponse très rapidement.">d'envoyer leur réponse très
                                 rapidement.
                             </span>
-                            <span>q'ils <input type="text" pattern="enverraient leur réponse très rapidement."></span>
+                            <span>q'ils <input type="text"
+                                    pattern="enverraient leur réponse très rapidement[.]?"></span>
                         </div>
                     </li>
                 </ol>
@@ -264,7 +267,7 @@
                             <span title="qu'il se souviendrait de nous.">
                                 qu'il se souviendra de nous ?
                             </span>
-                            <span><input type="text" pattern="qu'il se souviendrait de nous."></span>
+                            <span><input type="text" pattern="qu'il se souviendrait de nous[.]?"></span>
                         </div>
                     </li>
 
@@ -272,28 +275,28 @@
                         <div>
                             <span title="que nous recevrions le premier prix.">que nous recevrons le premier prix
                                 ?</span>
-                            <span><input type="text" pattern="que nous recevrions le premier prix."></span>
+                            <span><input type="text" pattern="que nous recevrions le premier prix[.]?"></span>
                         </div>
                     </li>
 
                     <li>
                         <div>
                             <span title="qu'ils serviraient des canapés.">qu'ils serviront des canapés ?</span>
-                            <span><input type="text" pattern="qu'ils serviraient des canapés."></span>
+                            <span><input type="text" pattern="qu'ils serviraient des canapés[.]?"></span>
                         </div>
                     </li>
 
                     <li>
                         <div>
                             <span title="qu'elle courrait le marathon.">qu'elle courra le marathon ?</span>
-                            <span><input type="text" pattern="qu'elle courrait le marathon."></span>
+                            <span><input type="text" pattern="qu'elle courrait le marathon[.]?"></span>
                         </div>
                     </li>
 
                     <li>
                         <div>
                             <span title="qu'il lui offrirait un bijou.">qu'il lui offrira un bijou ?</span>
-                            <span><input type="text" pattern="qu'il lui offrirait un bijou. "></span>
+                            <span><input type="text" pattern="qu'il lui offrirait un bijou[.]?"></span>
                         </div>
                     </li>
                 </ol>
