--- a/french/pages/exercise_conditionalperfect.html
+++ b/french/pages/exercise_conditionalperfect.html
@@ -11,6 +11,12 @@
 
     <link rel="icon" type="image/x-icon" href="../images/eiffel-tower.ico">
     <link rel="stylesheet" href="../styles.css">
+
+    <script type="module">
+        "use strict";
+        import { ErrorCounter } from '../js/ErrorCounter.mjs';
+        ErrorCounter.initialize();
+    </script>
 </head>
 
 <body>
@@ -297,6 +303,8 @@
                 </ol>
             </section>
 
+            <iframe src="partials/errorCounter.html"
+                onload="this.before(...(this.contentWindow.document.body||this.contentWindow.document).children);this.remove()"></iframe>
 
         </article>
     </main>
