--- a/french/pages/exercise_conditionalpresent.html
+++ b/french/pages/exercise_conditionalpresent.html
@@ -88,7 +88,7 @@
 
                     <li>
                         <b title="Voudriez">Proposition</b> -
-                        <input type="text" pattern="Voudriez">
+                        <input type="text" pattern="[Vv]oudriez">
                         -vous assister à ce concert de musique classique avec nous?
                     </li>
 
