added hints to exercise of concordence

--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -199,9 +199,14 @@
                             plusieurs boutiques, elle (<b title="a essayé">essayer</b>)
                             <input type="text" pattern="a essayé">
                             de nombreuses paires de chaussures,
-                            mais aucune (<b title="ne faisait">ne faire</b>)
-                            <input type="text" pattern="ne faisait">
-                            l’affaire.
+                            <span class="sentence-with-hint">
+                                <span class="hint" title="L’imparfait: une description.">
+                                    mais aucune
+                                </span>
+                                (<b title="ne faisait">ne faire</b>)
+                                <input type="text" pattern="ne faisait">
+                                l’affaire.
+                            </span>
 
                             Certaines (<b title="étaient">être</b>)
                             <input type="text" pattern="étaient">
@@ -229,9 +234,15 @@
                                     réellement à penser
                                 </span>
                             </span>
-                            que les souliers parfaits
-                            (<b title="n'existaient pas">ne exister pas</b>)
-                            <input type="text" class="wide" pattern="n'existaient pas">
+                            que
+                            <span class="sentence-with-hint">
+                                <span class="hint"
+                                    title="L’imparfait: une description («Exister» est un verbe de description et non un verbe d’action).">
+                                    les souliers parfaits
+                                </span>
+                                (<b title="n'existaient pas">ne exister pas</b>)
+                                <input type="text" class="wide" pattern="n'existaient pas">
+                            </span>
                             !
 
                             <span class="sentence-with-hint">
