added conditional exercises for conditional present

--- a/french/pages/exercise_conditionalpresent.html
+++ b/french/pages/exercise_conditionalpresent.html
@@ -107,7 +107,7 @@
             </section>
 
 
-            <section>
+            <section class="span-half">
                 <h4>Transformez les infinitifs en conditionnels présents.</h4>
 
                 <div>
@@ -195,7 +195,7 @@
                 </ol>
             </section>
 
-            <section>
+            <section class="span-half">
                 <h4>Transformez les futurs en conditionnels présents selon le modèle.</h4>
 
                 <ol>
@@ -243,7 +243,7 @@
                 </ol>
             </section>
 
-            <section>
+            <section class="span-half">
                 <h4>Répondez au conditionnel présent selon le modèle.</h4>
 
                 <div>
@@ -298,6 +298,106 @@
                             <span title="qu'il lui offrirait un bijou.">qu'il lui offrira un bijou ?</span>
                             <span><input type="text" pattern="qu'il lui offrirait un bijou[.]?"></span>
                         </div>
+                    </li>
+                </ol>
+            </section>
+
+            <section>
+                <h4>Complétez les phrases suivantes pour former une hypothèse sur le présent. </h4>
+
+                <div>
+                    Exemples :
+                </div>
+                <div>
+                    <span class="whitespace"></span>Elle ne va pas à ses cours parce qu’elle est malade.
+                </div>
+                <div>
+                    <span class="whitespace"></span>Si elle n’<b>était</b> pas malade, elle <b>irait</b> à ses cours.
+                </div>
+
+                <ol class="input-sentence-width">
+                    <li>
+                        <span title="Si elles avaient le temps, elles iraient au théâtre.">Elles ne vont pas au théâtre
+                            parce qu’elles n’ont pas le temps.</span>
+
+                        <input type="text" pattern="Si elles avaient le temps, elles iraient au théâtre[.]?">
+                    </li>
+                    <li>
+                        <span title="Si la chaussée n’était pas glacée, nous ferions une promenade.">Nous ne faisons pas
+                            de promenade parce que la chaussée est glacée.</span>
+                        <input type="text" pattern="Si la chaussée n’était pas glacée, nous ferions une promenade[.]?">
+                    </li>
+                    <li>
+                        <span title="Si les voisins faisaient moins de bruit, je pourrais dormir.">Je ne peux pas dormir
+                            parce que les voisins font trop de bruit.</span>
+                        <input type="text" pattern="Si les voisins faisaient moins de bruit, je pourrais dormir[.]?">
+                    </li>
+                    <li>
+                        <span title="S’il avait un travail, il aurait de l’argent.">Il n’a pas d’argent parce qu’il n’a
+                            pas de travail.</span>
+                        <input type="text" pattern="S’il avait un travail, il aurait de l’argent[.]?">
+                    </li>
+                    <li>
+                        <span title="Si nous avions une auto, nous sortirions plus souvent.">Vous ne sortez pas souvent
+                            parce que vous n’avez pas d’auto.</span>
+                        <input type="text" pattern="Si nous avions une auto, nous sortirions plus souvent[.]?">
+                    </li>
+                </ol>
+            </section>
+
+            <section>
+                <h4>Complétez les phrases suivantes pour former une hypothèse sur le présent.</h4>
+
+                <ol>
+                    <li>
+                        Si nous (<b title="savions">savoir</b>)
+                        <input type="text" pattern="savions">
+                        parler votre langue, nous trouverions du travail.
+                    </li>
+                    <li>
+                        Si (<b title="j'étais">je être</b>)
+                        <input type="text" pattern="j'étais">
+                        jolie, tous les garçons tomberaient amoureux de moi.
+                    </li>
+                    <li>
+                        Si elle (<b title="avait">avoir</b>)
+                        <input type="text" pattern="avait">
+                        un bon caractère, elle aurait plus d’amies.
+                    </li>
+                    <li>
+                        Si vous (<b title="arriviez">arriver</b>)
+                        <input type="text" pattern="arriviez">
+                        tôt, vous verriez peut-être mes parents.
+                    </li>
+                    <li>
+                        Si tu (<b title="suivais">suivre</b>)
+                        <input type="text" pattern="suivais">
+                        les indications, tu trouverais plus facilement ton chemin.
+                    </li>
+                    <li>
+                        Si nous écoutions le film, nous (<b title="comprendrions">comprendre</b>)
+                        <input type="text" pattern="comprendrions">
+                        mieux l’action.
+                    </li>
+                    <li>
+                        Si tu étais moins bavard, les gens te (<b title="confieraient">confier</b>)
+                        <input type="text" pattern="confieraient">
+                        plus de secrets.
+                    </li>
+                    <li>
+                        Si vous mangiez moins, vous (<b title="auriez">avoir</b>)
+                        <input type="text" pattern="auriez">
+                        la taille plus fine.
+                    </li>
+                    <li>
+                        Si nous (<b title="savions">savoir</b>)
+                        <input type="text" pattern="savions">
+                        conduire la voiture, nous pourrions l’emprunter le samedi soir.
+                    </li>
+                    <li>
+                        Si j’avais plus de confiance en moi, je (<b title="téléphonerais">téléphoner</b>)
+                        <input type="text" pattern="téléphonerais">
+                        à James.
                     </li>
                 </ol>
             </section>
