added conditional exercise for future tense

--- a/french/pages/exercise_conditionalpresent.html
+++ b/french/pages/exercise_conditionalpresent.html
@@ -304,7 +304,11 @@
 
             <section>
                 <h4>Complétez les phrases suivantes pour former une hypothèse sur le présent. </h4>
-
+                <div>
+                    Lorsque nous imaginons quelque chose qui n’existe pas, nous faisons une hypothèse sur le présent :
+                    <br />
+                    Si + imparfait, conditionnel présent <br /><br />
+                </div>
                 <div>
                     Exemples :
                 </div>
