--- a/french/pages/exercise_conditionalpresent.html
+++ b/french/pages/exercise_conditionalpresent.html
@@ -329,7 +329,7 @@
                     <li>
                         <span title="Si la chaussée n’était pas glacée, nous ferions une promenade.">Nous ne faisons pas
                             de promenade parce que la chaussée est glacée.</span>
-                        <input type="text" pattern="Si la chaussée n’était pas glacée, nous ferions une promenade[.]?">
+                        <input type="text" pattern="Si la chaussée n'était pas glacée, nous ferions une promenade[.]?">
                     </li>
                     <li>
                         <span title="Si les voisins faisaient moins de bruit, je pourrais dormir.">Je ne peux pas dormir
@@ -339,7 +339,7 @@
                     <li>
                         <span title="S’il avait un travail, il aurait de l’argent.">Il n’a pas d’argent parce qu’il n’a
                             pas de travail.</span>
-                        <input type="text" pattern="S’il avait un travail, il aurait de l’argent[.]?">
+                        <input type="text" pattern="S'il avait un travail, il aurait de l'argent[.]?">
                     </li>
                     <li>
                         <span title="Si nous avions une auto, nous sortirions plus souvent.">Vous ne sortez pas souvent
