--- a/french/pages/exercise_future.html
+++ b/french/pages/exercise_future.html
@@ -340,13 +340,13 @@
                         <span title="Mais, demain soir, s’ils ne travaillent pas, ils iront au cinéma.">Ce soir, ils ne
                             vont pas au cinéma parce qu’ils travaillent.</span>
                         <input type="text"
-                            pattern="Mais, demain soir, s’ils ne travaillent pas, ils iront au cinéma[.]?">
+                            pattern="Mais, demain soir, s'ils ne travaillent pas, ils iront au cinéma[.]?">
                     </li>
                     <li>
                         <span title="Mais, l’hiver prochain, si elle n’a pas de rhume, elle fera du ski."> Cet hiver,
                             elle ne fait pas de ski parce qu’elle a un rhume.</span>
                         <input type="text"
-                            pattern="Mais, l’hiver prochain, si elle n’a pas de rhume, elle fera du ski[.]?">
+                            pattern="Mais, l'hiver prochain, si elle n'a pas de rhume, elle fera du ski[.]?">
                     </li>
                     <li>
                         <span title="Demain, si je ne suis pas à la diète, je mangerai du dessert.">Aujourd’hui, je
@@ -362,7 +362,7 @@
                     <li>
                         <span title="Mais, demain, s’il n’y a pas de tempête de neige, je sortirai."> Aujourd’hui, je ne
                             sors pas parce qu’il y a une tempête de neige.</span>
-                        <input type="text" pattern="Mais, demain, s’il n’y a pas de tempête de neige, je sortirai[.]?">
+                        <input type="text" pattern="Mais, demain, s'il n'y a pas de tempête de neige, je sortirai[.]?">
                     </li>
                 </ol>
             </section>
