fine-tuning exercice conditional present

--- a/french/pages/exercise_conditionalpresent.html
+++ b/french/pages/exercise_conditionalpresent.html
@@ -41,7 +41,7 @@
                     <input type="text" pattern="prendrais">
                     rendez-vous chez le coiffeur et je lui (<b title="demanderais">demander</b>)
                     <input type="text" pattern="demanderais">
-                    de me faire une nouvelle tête. Je (<b title="irais">aller</b>)
+                    de me faire une nouvelle tête. (<b title="[Jj]'irais">Je aller</b>)
                     <input type="text" pattern="irais">
                     aussi magasiner et je (<b title="achèterais">acheter</b>)
                     <input type="text" pattern="achèterais">
@@ -380,7 +380,7 @@
                     </li>
                     <li>
                         Si nous écoutions le film, nous (<b title="comprendrions">comprendre</b>)
-                        <input type="text" pattern="comprendrions">
+                        <input type="text" class="wide" pattern="comprendrions">
                         mieux l’action.
                     </li>
                     <li>
