--- a/french/index.html
+++ b/french/index.html
@@ -53,6 +53,14 @@
   </div>
 
   <div class="card">
+    <header>Le plus-que-parfait</header>
+    <a
+      href="https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Foraprdnt.uqtr.uquebec.ca%2Fportail%2Fdocs%2FGSC2213%2FF525458257_le_plus_que_parfait_th_orie.pptx&wdOrigin=BROWSELINK">théorie</a>
+    <a href="pages/conjugations.html?Le%20plus-que-parfait">exercice de liste de verbes</a>
+    <a href="">exercice de texte</a>
+  </div>
+
+  <div class="card">
     <header>Le conditionnel présent</header>
     <a
       href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F601395165_Le_conditionnel_present_conjugaison.pdf">théorie</a>
