added past perfect verb list to stats

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -31,6 +31,7 @@
                         <th colspan="2">passé composé</th>
                         <th colspan="2">imparfait</th>
                         <th colspan="2">futur simple</th>
+                        <th colspan="2">plus-que-parfait</th>
                         <th colspan="2">conditionnel présent</th>
                         <th colspan="2">concordance</th>
                     </tr>
@@ -50,6 +51,10 @@
                         <!-- futur simple -->
                         <th><a href="conjugations.html?Le%20futur%20simple">liste</a></th>
                         <th><a href="exercise_future.html">texte</a></th>
+
+                        <!-- plus-que-parfait -->
+                        <th><a href="conjugations.html?Le%20plus-que-parfait">liste</a></th>
+                        <th><a href="">texte</a></th>
 
                         <!-- conditionnel présent -->
                         <th><a href="conjugations.html?Le%20conditionnel%20pr%C3%A9sent">liste</a></th>
@@ -75,6 +80,9 @@
 
                             <td class="conjugations.html?Le%20futur%20simple"></td>
                             <td class="exercise_future.html"></td>
+
+                            <td class="conjugations.html?Le%20plus-que-parfait"></td>
+                            <td class=""></td>
 
                             <td class="conjugations.html?Le%20conditionnel%20pr%C3%A9sent"></td>
                             <td class="exercise_conditionalpresent.html"></td>
