added text exercise for past perfect

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -33,7 +33,7 @@
                         <th colspan="2">futur simple</th>
                         <th colspan="2">plus-que-parfait</th>
                         <th colspan="2">conditionnel présent</th>
-                        <th colspan="2">concordance</th>
+                        <th colspan="1">concordance</th>
                     </tr>
                     <tr>
                         <!-- présent -->
@@ -54,7 +54,7 @@
 
                         <!-- plus-que-parfait -->
                         <th><a href="conjugations.html?Le%20plus-que-parfait">liste</a></th>
-                        <th><a href="">texte</a></th>
+                        <th><a href="exercise_pastperfect.html">texte</a></th>
 
                         <!-- conditionnel présent -->
                         <th><a href="conjugations.html?Le%20conditionnel%20pr%C3%A9sent">liste</a></th>
@@ -82,7 +82,7 @@
                             <td class="exercise_future.html"></td>
 
                             <td class="conjugations.html?Le%20plus-que-parfait"></td>
-                            <td class=""></td>
+                            <td class="exercise_pastperfect.html"></td>
 
                             <td class="conjugations.html?Le%20conditionnel%20pr%C3%A9sent"></td>
                             <td class="exercise_conditionalpresent.html"></td>
